@@ -92,3 +92,10 @@ CB_NOWARNDEF (cb_warn_linkage, "linkage",
 
 CB_NOWARNDEF (cb_warn_unreachable, "unreachable",
 	_("  -Wunreachable         warn likely unreachable statements"))
+
+CB_ONWARNDEF (cb_warn_dialect, "dialect",
+	_("  -Wno-dialect          do not warn dialect specific issues"))
+
+CB_WARNDEF (cb_warn_filler, "others",
+	_("  -Wothers              warnings with no separate group"))
+
