@@ -1,4 +1,11 @@
 
+2017-11-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* warning.def, cobc.h: allow -Wno-other to suppress messages generated
+	  because of "COBC_WARN_FILLER"
+	* warning.def, error.c, typeck.c: allow -Wno-dialect to suppress messages
+	  generated because of dialect option value "warning"
+
 2017-11-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* pplex.l: fixed bug #458 by adding error handling for copybooks
